fixed portfolio page on mobile

--- a/src/components/pages/Portfolio.css
+++ b/src/components/pages/Portfolio.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1200px) {
+    .recent {
+        width: 28% !important;
+    }
+}
+
 @media screen and (max-width: 1000px) {
     .recent {
         width: 32% !important;
@@ -7,12 +13,13 @@
 @media screen and (max-width: 768px) {
     .recent {
         width: 38% !important;
+        margin-top: 25px;
+        padding-top: 4px;
     }
 }
 
 @media screen and (max-width: 468px) {
     .recent {
         width: 48% !important;
-        padding-top: 4px;
     }
 }
